version/0.23/_sources/api/solver/_autosummary/settings/degrees_of_freedom.rst.txt
:orphan:

.. _degrees_of_freedom:

degrees_of_freedom
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.degrees_of_freedom.degrees_of_freedom
    :show-inheritance:

.. rubric:: Attributes

=========================   ====================================================

Attribute                                                                Summary

=========================   ====================================================
:ref:`option <option_12>`       Select method for calculating material property.

:ref:`value <value_11>`                     Specify the constant property value.

=========================   ====================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

